Web application configuration was fixed